--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,98 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@300&display=swap');
+
+
+* {
+  box-sizing: border-box;
+  margin: 0 ;
+  padding: 0;
+}
+
+p {
+  font-size: 1.6rem;
+}
+h1{
+  font-size: 6rem;
+}
+
+.app{
+  width:100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4) ;
+  color: #ffff;
+
+
+}
+
+.app:before {
+  content: "";
+  background:url('./assests/sunset.jpg') no-repeat center/cover ;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.app .search {
+  text-align: center;
+  padding: 1rem;
+
+}
+.app input {
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255,255,255, 0.8);
+  background: rgba(255,255,255,0.1);
+  color: #f8f8f8;
+
+}
+::placeholder {
+  color:#f8f8f8 ;
+}
+
+.container{
+  max-width: 700px;
+  height: 700px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+
+
+}
+
+.app .top {
+  width:100%;
+  margin: 1rem auto;
+
+}
+.app .description{
+  position: relative;
+  right: -90%;
+  transform-origin: 0 0;
+  transform: rotate(269deg);
+
+}
+
+.app .bottom {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(255,255,255,0.2);
+
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
